--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-<div id="root"></div>
+<! DOCTYPE html>
+	<html>
+
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+	</head>
+
+	<body>
+		<div id="root"></div>
+		<script>
+
+		</script>
+	</body>
+
+	</html>
