--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,34 @@
 	<html>
 
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 
 	<body>
 		<div id="root"></div>
 		<script>
+			$(document).ready(function(){
+        $(document).keydown(function(event) {
+                  if (event.ctrlKey==true && (event.which == '61' || event.which == '107' || event.which == '173' || event.which == '109'  || event.which == '187'  || event.which == '189'  ) ) {
+              alert('disabling zooming'); 
+          event.preventDefault();
+          // 107 Num Key  +
+          //109 Num Key  -
+          //173 Min Key  hyphen/underscor Hey
+          // 61 Plus key  +/=
+            }
+        });
 
+        window.addEventListener("wheel", function (event) {
+              if (event.ctrlKey == true) {
+                //alert('disabling zooming'); 
+              event.preventDefault();
+              }
+        }, {passive: false});
+
+       
+      });
 		</script>
 	</body>
 
